k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: republicschool-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: republicschool-ui
  template:
    metadata:
      labels:
        app: republicschool-ui
    spec:
      containers:
        - name: republicschool-ui
          image: gcr.io/maruti-project-454712/republicschool-ui:latest
          ports:
            - containerPort: 3002
