k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: republicschool-ui-service
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"80":{}}}'
spec:
  type: ClusterIP
  selector:
    app: republicschool-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
