k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: republicschool-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"  # Use GCP's Ingress controller
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: republicschool-ui-service
                port:
                  number: 80
